objects/qsyd_FE__FileExplorerFolder__c.object
<CustomObject>
    <description>Store a hierarchical structure of content documents</description>
    <fields>
        <fullName>qsyd_FE__Folder__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Folder</label>
        <referenceTo>qsyd_FE__FileExplorerFolder__c</referenceTo>
        <relationshipLabel>Folders</relationshipLabel>
        <relationshipName>File_Explorer_Folders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>qsyd_FE__IsDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Deprecated.</description>
        <label>Is Deleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>qsyd_FE__Label__c</fullName>
        <description>Folder Label</description>
        <externalId>true</externalId>
        <inlineHelpText>Folder Label</inlineHelpText>
        <label>Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>qsyd_FE__LinkedEntityId__c</fullName>
        <description>Linked Entity Id</description>
        <externalId>true</externalId>
        <inlineHelpText>Linked Entity Id</inlineHelpText>
        <label>Linked Entity Id</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>qsyd_FE__TemplateFolderId__c</fullName>
        <description>Original folder id used when cloning a template</description>
        <externalId>true</externalId>
        <inlineHelpText>Original folder id used when cloning a template</inlineHelpText>
        <label>Template Folder Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>File Explorer Folder</label>
    <listViews>
        <fullName>qsyd_FE__All</fullName>
        <columns>NAME</columns>
        <columns>qsyd_FE__Folder__c</columns>
        <columns>qsyd_FE__Label__c</columns>
        <columns>qsyd_FE__TemplateFolderId__c</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>FEF-{0000000}</displayFormat>
        <label>File Explorer Folder Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>File Explorer Folders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>